# data-contract-creator

./: Cargo.toml  LICENSE  README.md  index.html  index.scss
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: deploy.yml
src/: main.rs
